--- a/Tarea 5/Tarea 5.html
+++ b/Tarea 5/Tarea 5.html
@@ -24,7 +24,7 @@
         <input type="file" name="val7"><br>
         <input type="date" name="val8"><br>
 
-        <input type="submit" value"Enviar">
+        <input type="submit" value="Enviar">
     </form>
 </body>
 </html>
